Add the New Releases section

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -240,35 +240,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <div class="song-info-block">
@@ -286,35 +262,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <div class="song-info-block">
@@ -332,35 +284,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <div class="song-info-block">
@@ -376,35 +304,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <div class="song-info-block">
@@ -420,35 +324,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <div class="song-info-block">
@@ -466,35 +346,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <div class="song-info-block">
@@ -510,35 +366,11 @@
                 </div>
               </div>
 
-              <svg
-                class="reorder"
-                width="16px"
-                height="16px"
-                viewBox="0 0 16 16"
-                fill="white"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                <g
-                  id="SVGRepo_tracerCarrier"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                ></g>
-                <g id="SVGRepo_iconCarrier">
-                  <path
-                    d="M8 12C9.10457 12 10 12.8954 10 14C10 15.1046 9.10457 16 8 16C6.89543 16 6 15.1046 6 14C6 12.8954 6.89543 12 8 12Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M8 6C9.10457 6 10 6.89543 10 8C10 9.10457 9.10457 10 8 10C6.89543 10 6 9.10457 6 8C6 6.89543 6.89543 6 8 6Z"
-                    fill="white"
-                  ></path>
-                  <path
-                    d="M10 2C10 0.89543 9.10457 -4.82823e-08 8 0C6.89543 4.82823e-08 6 0.895431 6 2C6 3.10457 6.89543 4 8 4C9.10457 4 10 3.10457 10 2Z"
-                    fill="white"
-                  ></path>
-                </g>
-              </svg>
+              <img
+                class="more-button"
+                src="/assets/images/svg/3dots-vertical.svg"
+                alt="more"
+              />
             </div>
 
             <a class="following" href="qwe.html">
@@ -549,6 +381,234 @@
       </div>
 
       <div class="hero">
+        <div class="new-releases-section">
+          <div class="new-releases-title-box">
+            <h3 class="new-releases-title no-margin">New Releases</h3>
+
+            <div class="turn-pages-buttons">
+              <img
+                class="previous-button"
+                src="/assets/images/svg/previous-button.svg"
+                alt="previous-button"
+              />
+              <img
+                class="next-button"
+                src="/assets/images/svg/next-button.svg"
+                alt="next-button"
+              />
+            </div>
+          </div>
+          <ul class="new-releases-list no-margin">
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-8.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Все закінчиться</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon-2.jpg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Electrobirds</p>
+                  <p class="new-release-author-info no-margin">
+                    11.4K followers&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+
         <div class="short-song-menu"></div>
       </div>
     </div>
