--- a/source/html/index.html
+++ b/source/html/index.html
@@ -609,6 +609,13 @@
           </ul>
         </div>
 
+        <div class="playlists-section">
+          <h3 class="playlists-title-box no-margin">
+            Recently Played Playlists
+          </h3>
+          <div class="playlists-container">content</div>
+        </div>
+
         <div class="short-song-menu"></div>
       </div>
     </div>
