Add sections examples

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -610,9 +610,36 @@
         </div>
 
         <div class="playlists-section">
-          <h3 class="playlists-title-box no-margin">
-            Recently Played Playlists
-          </h3>
+          <p class="playlists-title-box no-margin">
+            Recently Played: <span class="yellow">Playlists</span> |
+            <span class="gray">Songs</span> |
+            <span class="gray"> Artists</span>
+          </p>
+          <div class="playlists-container">content</div>
+        </div>
+
+        <div class="playlists-section">
+          <p class="playlists-title-box no-margin">Recommended Songs</p>
+          <div class="playlists-container">content</div>
+        </div>
+
+        <div class="playlists-section">
+          <p class="playlists-title-box no-margin">Genres ("the root")</p>
+          <div class="playlists-container">content</div>
+        </div>
+
+        <div class="playlists-section">
+          <p class="playlists-title-box no-margin">Most Listened Artists</p>
+          <div class="playlists-container">content</div>
+        </div>
+
+        <div class="playlists-section">
+          <p class="playlists-title-box no-margin">Similar to [artist]</p>
+          <div class="playlists-container">content</div>
+        </div>
+
+        <div class="playlists-section">
+          <p class="playlists-title-box no-margin">Chronology</p>
           <div class="playlists-container">content</div>
         </div>
 
