Add the Recently-played section and edit the New-Releases section
I just created an example of Recently played section with playlists.
Additionally I also replaced covers and icons at the New Releases section.

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -402,24 +402,154 @@
             <li class="new-release-box">
               <img
                 class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
+                src="/assets/images/png/я (не) врятую тебе від самотності.png"
                 alt="song-cover-8"
               />
 
               <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
+                <p class="song-title no-margin">я (не) врятую тебе ...</p>
               </div>
 
               <div class="new-release-author-box">
                 <img
                   class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
+                  src="/assets/images/png/апатія.png"
                   alt="new-release-author-icon"
                 />
                 <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
+                  <p class="no-margin">Апатія</p>
                   <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
+                    114.3K followers&nbsp; • &nbsp;29 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Лесбіянство (не) ...</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/jpg/author-icon.jpeg"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">СТРУКТУРА ...</p>
+                  <p class="new-release-author-info no-margin">
+                    118.4K followers&nbsp; • &nbsp;42 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/png/наяву.png"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Наяву</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/png/sadsvit.png"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Sadsvit</p>
+                  <p class="new-release-author-info no-margin">
+                    435.7K followers&nbsp; • &nbsp;40 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/png/oulala.png"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">oulala</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/png/copycat.png"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Copycat</p>
+                  <p class="new-release-author-info no-margin">
+                    3.2K followers&nbsp; • &nbsp;7 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/png/це не сильно радикально.png"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">це не сильно ...</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/png/хейтспіч.png"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">хейтспіч</p>
+                  <p class="new-release-author-info no-margin">
+                    77.9K followers&nbsp; • &nbsp;31 songs
+                  </p>
+                </div>
+              </div>
+            </li>
+
+            <li class="new-release-box">
+              <img
+                class="new-release-cover"
+                src="/assets/images/jpg/song-cover-6.jpg"
+                alt="song-cover-8"
+              />
+
+              <div class="new-release-title-box">
+                <p class="song-title no-margin">Breach</p>
+              </div>
+
+              <div class="new-release-author-box">
+                <img
+                  class="new-release-author-icon"
+                  src="/assets/images/png/21-pilots.png"
+                  alt="new-release-author-icon"
+                />
+                <div class="author-infobox">
+                  <p class="no-margin">Twenty One ...</p>
+                  <p class="new-release-author-info no-margin">
+                    25.7M followers&nbsp; • &nbsp;87 songs
                   </p>
                 </div>
               </div>
@@ -454,154 +584,24 @@
             <li class="new-release-box">
               <img
                 class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
+                src="/assets/images/png/deslocado.png"
                 alt="song-cover-8"
               />
 
               <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
+                <p class="song-title no-margin">Deslocado</p>
               </div>
 
               <div class="new-release-author-box">
                 <img
                   class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
+                  src="/assets/images/png/napa.png"
                   alt="new-release-author-icon"
                 />
                 <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
+                  <p class="no-margin">NAPA</p>
                   <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
-                  <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
-                  <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
-                  <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
-                  <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
-                  </p>
-                </div>
-              </div>
-            </li>
-
-            <li class="new-release-box">
-              <img
-                class="new-release-cover"
-                src="/assets/images/jpg/song-cover-8.jpg"
-                alt="song-cover-8"
-              />
-
-              <div class="new-release-title-box">
-                <p class="song-title no-margin">Все закінчиться</p>
-              </div>
-
-              <div class="new-release-author-box">
-                <img
-                  class="new-release-author-icon"
-                  src="/assets/images/jpg/author-icon-2.jpg"
-                  alt="new-release-author-icon"
-                />
-                <div class="author-infobox">
-                  <p class="no-margin">Electrobirds</p>
-                  <p class="new-release-author-info no-margin">
-                    11.4K followers&nbsp; • &nbsp;20 songs
+                    104.1K followers&nbsp; • &nbsp;29 songs
                   </p>
                 </div>
               </div>
@@ -610,12 +610,178 @@
         </div>
 
         <div class="playlists-section">
-          <p class="playlists-title-box no-margin">
-            Recently Played: <span class="yellow">Playlists</span> |
-            <span class="gray">Songs</span> |
-            <span class="gray"> Artists</span>
-          </p>
-          <div class="playlists-container">content</div>
+          <div class="playlists-title-box">
+            <div class="playlists-title no-margin">
+              <p class="no-margin">Recently Played:</p>
+              <ul class="recently-played-list">
+                <li class="yellow">Playlists</li>
+                <li class="small-vertical-line"></li>
+                <li class="gray">Songs</li>
+                <li class="small-vertical-line"></li>
+                <li class="gray">Artists</li>
+              </ul>
+            </div>
+
+            <div class="turn-pages-buttons">
+              <img
+                class="previous-button"
+                src="/assets/images/svg/previous-button.svg"
+                alt="previous-button"
+              />
+              <img
+                class="next-button"
+                src="/assets/images/svg/next-button.svg"
+                alt="next-button"
+              />
+            </div>
+          </div>
+          <div class="playlists-container">
+            <ul class="new-releases-list no-margin">
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/структура-щастя_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">СТРУКТУРА ЩАСТЯ</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;29 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/melody_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Melody</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;45 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;25 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/all-out-2010s_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">All Out 2010s</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;208 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/пігулки_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Пігулки від голови</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;25 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/постпанк_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Пост-Панк</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;66 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/phonk_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">emo rap (temp playlist)</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;14 songs
+                  </p>
+                </div>
+              </li>
+
+              <li class="new-release-box">
+                <img
+                  class="new-release-cover"
+                  src="/assets/images/png/eyedress_playlist.png"
+                  alt="song-cover-8"
+                />
+
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Eyedress</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <p class="no-margin author-playlist">
+                    aksond1&nbsp; • &nbsp;20 songs
+                  </p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="playlists-section">
